--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Sembunyikan scrollbar di Firefox */
+.scrollbar-hide {
+  scrollbar-width: none; /* Firefox */
+}
